# name: test_conventional[1000.0]
  array([[5.32147332e+03, 3.10850993e+03, 1.80061545e+03, 1.03395258e+03,
          5.88776075e+02, 3.32605957e+02, 1.86494892e+02, 1.03848450e+02,
          5.74614706e+01, 3.16092084e+01, 1.72936599e+01, 9.41300496e+00,
          5.09828724e+00, 2.74788703e+00, 1.47374821e+00, 7.86360775e-01,
          4.17313656e-01, 2.20172330e-01, 1.15424351e-01, 6.00890578e-02,
          3.10410575e-02, 1.58989692e-02, 8.06692444e-03, 4.05086605e-03,
          2.01131548e-03, 9.86544068e-04, 4.77666022e-04, 2.28180098e-04,
          1.07528297e-04, 5.00100389e-05],
         [9.72794303e+03, 5.84775051e+03, 3.49698198e+03, 2.07820324e+03,
          1.22608395e+03, 7.17459247e+02, 4.16152607e+02, 2.39186248e+02,
          1.36216448e+02, 7.68784555e+01, 4.30128039e+01, 2.38660768e+01,
          1.31382154e+01, 7.17819150e+00, 3.89340366e+00, 2.09674511e+00,
          1.12115521e+00, 5.95152590e-01, 3.13556136e-01, 1.63887962e-01,
          8.49338764e-02, 4.36143825e-02, 2.21749113e-02, 1.11536071e-02,
          5.54519841e-03, 2.72274770e-03, 1.31940157e-03, 6.30693661e-04,
          2.97366989e-04, 1.38359704e-04],
         [9.70670163e+03, 5.83020957e+03, 3.48273825e+03, 2.06677042e+03,
          1.21695340e+03, 7.10154459e+02, 4.10247676e+02, 2.34330179e+02,
          1.32141459e+02, 7.33967231e+01, 4.00094419e+01, 2.12814538e+01,
          1.09475007e+01, 5.54718897e+00, 2.88616541e+00, 1.46827173e+00,
          7.27624934e-01, 3.50306542e-01, 1.63449982e-01, 7.37504905e-02,
          3.21076355e-02, 1.34499577e-02, 5.39956352e-03, 2.06392299e-03,
          7.42651135e-04, 2.46107929e-04, 7.15220532e-05, 1.66187628e-05,
          5.94295086e-06, 2.62553778e-06],
         [4.77459997e+03, 2.66132466e+03, 1.43710650e+03, 7.44827618e+02,
          3.94781846e+02, 2.10004745e+02, 1.08659817e+02, 5.45727429e+01,
          2.65573652e+01, 1.25047545e+01, 5.68921799e+00, 2.49710397e+00,
          1.05487148e+00, 4.27079308e-01, 1.64455677e-01, 5.93477657e-02,
          1.94525237e-02, 5.33964165e-03, 1.29859181e-03, 5.99724071e-04,
          2.81662027e-04, 1.30326760e-04, 5.93020356e-05, 2.64758859e-05,
          1.15665230e-05, 4.92858792e-06, 2.04076145e-06, 8.17601442e-07,
          3.15583285e-07, 1.16804401e-07]])
---
# name: test_conventional[None]
  array([[5.32147332e+03, 3.10850993e+03, 1.80061545e+03, 1.03395258e+03,
          5.88776075e+02, 3.32605957e+02, 1.86494892e+02, 1.03848450e+02,
          5.74614706e+01, 3.16092084e+01, 1.72936599e+01, 9.41300496e+00,
          5.09828724e+00, 2.74788703e+00, 1.47374821e+00, 7.86360775e-01,
          4.17313656e-01, 2.20172330e-01, 1.15424351e-01, 6.00890578e-02,
          3.10410575e-02, 1.58989692e-02, 8.06692444e-03, 4.05086605e-03,
          2.01131548e-03, 9.86544068e-04, 4.77666022e-04, 2.28180098e-04,
          1.07528297e-04, 5.00100389e-05],
         [9.72794303e+03, 5.84775051e+03, 3.49698198e+03, 2.07820324e+03,
          1.22608395e+03, 7.17459247e+02, 4.16152607e+02, 2.39186248e+02,
          1.36216448e+02, 7.68784555e+01, 4.30128039e+01, 2.38660768e+01,
          1.31382154e+01, 7.17819150e+00, 3.89340366e+00, 2.09674511e+00,
          1.12115521e+00, 5.95152590e-01, 3.13556136e-01, 1.63887962e-01,
          8.49338764e-02, 4.36143825e-02, 2.21749113e-02, 1.11536071e-02,
          5.54519841e-03, 2.72274770e-03, 1.31940157e-03, 6.30693661e-04,
          2.97366989e-04, 1.38359704e-04],
         [9.72794303e+03, 5.84775051e+03, 3.49698198e+03, 2.07820324e+03,
          1.22608395e+03, 7.17459247e+02, 4.16152607e+02, 2.39186248e+02,
          1.36216448e+02, 7.68784555e+01, 4.30128039e+01, 2.38660768e+01,
          1.31382154e+01, 7.17819150e+00, 3.89340366e+00, 2.09674511e+00,
          1.12115521e+00, 5.95152590e-01, 3.13556136e-01, 1.63887962e-01,
          8.49338764e-02, 4.36143825e-02, 2.21749113e-02, 1.11536071e-02,
          5.54519841e-03, 2.72274770e-03, 1.31940157e-03, 6.30693661e-04,
          2.97366989e-04, 1.38359704e-04],
         [5.32147332e+03, 3.10850993e+03, 1.80061545e+03, 1.03395258e+03,
          5.88776075e+02, 3.32605957e+02, 1.86494892e+02, 1.03848450e+02,
          5.74614706e+01, 3.16092084e+01, 1.72936599e+01, 9.41300496e+00,
          5.09828724e+00, 2.74788703e+00, 1.47374821e+00, 7.86360775e-01,
          4.17313656e-01, 2.20172330e-01, 1.15424351e-01, 6.00890578e-02,
          3.10410575e-02, 1.58989692e-02, 8.06692444e-03, 4.05086605e-03,
          2.01131548e-03, 9.86544068e-04, 4.77666022e-04, 2.28180098e-04,
          1.07528297e-04, 5.00100389e-05]])
---
# name: test_prompt[1000.0]
  array([[3.34791156e+01, 2.39068243e+01, 1.70371098e+01, 1.21155083e+01,
          8.59598194e+00, 6.08391443e+00, 4.29454443e+00, 3.02269720e+00,
          2.12077351e+00, 1.48276530e+00, 1.03266409e+00, 7.16066549e-01,
          4.94104339e-01, 3.39060874e-01, 2.31211063e-01, 1.56546315e-01,
          1.05139478e-01, 6.99717409e-02, 4.60925663e-02, 3.00193498e-02,
          1.93093984e-02, 1.22555217e-02, 7.67005032e-03, 4.73185075e-03,
          2.87798042e-03, 1.72681231e-03, 1.02329784e-03, 5.99874260e-04,
          3.48562915e-04, 2.01198968e-04],
         [3.34969414e+01, 2.39196027e+01, 1.70464780e+01, 1.21224969e+01,
          8.60125752e+00, 6.08792339e+00, 4.29759753e+00, 3.02501908e+00,
          2.12253194e+00, 1.48408868e+00, 1.03365218e+00, 7.16797527e-01,
          4.94639546e-01, 3.39448313e-01, 2.31488086e-01, 1.56741750e-01,
          1.05275362e-01, 7.00647412e-02, 4.61551370e-02, 3.00606757e-02,
          1.93361542e-02, 1.22724788e-02, 7.68055699e-03, 4.73820788e-03,
          2.88173290e-03, 1.72897136e-03, 1.02450760e-03, 6.00533525e-04,
          3.48911528e-04, 2.01377060e-04],
         [3.34594340e+01, 2.38822961e+01, 1.70098065e+01, 1.20866726e+01,
          8.56622205e+00, 6.05342398e+00, 4.26313402e+00, 2.98991257e+00,
          2.08602383e+00, 1.44542197e+00, 9.92288338e-01, 6.72593450e-01,
          4.48015963e-01, 2.96068570e-01, 1.97391838e-01, 1.29714319e-01,
          8.38447995e-02, 5.32408618e-02, 3.31891002e-02, 2.03088056e-02,
          1.22039600e-02, 7.20792872e-03, 4.18889664e-03, 2.39837482e-03,
          1.35472270e-03, 7.55917274e-04, 4.17218078e-04, 2.28573866e-04,
          1.26997773e-04, 7.01963894e-05],
         [3.14104164e+01, 2.18258462e+01, 1.49503109e+01, 1.00593156e+01,
          6.85143489e+00, 4.66961162e+00, 3.14080311e+00, 2.08317522e+00,
          1.36210379e+00, 8.78281558e-01, 5.58890296e-01, 3.51373062e-01,
          2.18521292e-01, 1.34572798e-01, 8.21317029e-02, 4.96933946e-02,
          2.98014179e-02, 1.77038689e-02, 1.05053885e-02, 6.28256001e-03,
          3.69241611e-03, 2.12823855e-03, 1.20150716e-03, 6.63565089e-04,
          3.58087550e-04, 1.88584418e-04, 9.67923913e-05, 4.83287697e-05,
          2.34217020e-05, 1.09809697e-05]])
---
# name: test_prompt[None]
  array([[3.34791156e+01, 2.39068243e+01, 1.70371098e+01, 1.21155083e+01,
          8.59598194e+00, 6.08391443e+00, 4.29454443e+00, 3.02269720e+00,
          2.12077351e+00, 1.48276530e+00, 1.03266409e+00, 7.16066549e-01,
          4.94104339e-01, 3.39060874e-01, 2.31211063e-01, 1.56546315e-01,
          1.05139478e-01, 6.99717409e-02, 4.60925663e-02, 3.00193498e-02,
          1.93093984e-02, 1.22555217e-02, 7.67005032e-03, 4.73185075e-03,
          2.87798042e-03, 1.72681231e-03, 1.02329784e-03, 5.99874260e-04,
          3.48562915e-04, 2.01198968e-04],
         [3.34969414e+01, 2.39196027e+01, 1.70464780e+01, 1.21224969e+01,
          8.60125752e+00, 6.08792339e+00, 4.29759753e+00, 3.02501908e+00,
          2.12253194e+00, 1.48408868e+00, 1.03365218e+00, 7.16797527e-01,
          4.94639546e-01, 3.39448313e-01, 2.31488086e-01, 1.56741750e-01,
          1.05275362e-01, 7.00647412e-02, 4.61551370e-02, 3.00606757e-02,
          1.93361542e-02, 1.22724788e-02, 7.68055699e-03, 4.73820788e-03,
          2.88173290e-03, 1.72897136e-03, 1.02450760e-03, 6.00533525e-04,
          3.48911528e-04, 2.01377060e-04],
         [3.34969414e+01, 2.39196027e+01, 1.70464780e+01, 1.21224969e+01,
          8.60125752e+00, 6.08792339e+00, 4.29759753e+00, 3.02501908e+00,
          2.12253194e+00, 1.48408868e+00, 1.03365218e+00, 7.16797527e-01,
          4.94639546e-01, 3.39448313e-01, 2.31488086e-01, 1.56741750e-01,
          1.05275362e-01, 7.00647412e-02, 4.61551370e-02, 3.00606757e-02,
          1.93361542e-02, 1.22724788e-02, 7.68055699e-03, 4.73820788e-03,
          2.88173290e-03, 1.72897136e-03, 1.02450760e-03, 6.00533525e-04,
          3.48911528e-04, 2.01377060e-04],
         [3.34791156e+01, 2.39068243e+01, 1.70371098e+01, 1.21155083e+01,
          8.59598194e+00, 6.08391443e+00, 4.29454443e+00, 3.02269720e+00,
          2.12077351e+00, 1.48276530e+00, 1.03266409e+00, 7.16066549e-01,
          4.94104339e-01, 3.39060874e-01, 2.31211063e-01, 1.56546315e-01,
          1.05139478e-01, 6.99717409e-02, 4.60925663e-02, 3.00193498e-02,
          1.93093984e-02, 1.22555217e-02, 7.67005032e-03, 4.73185075e-03,
          2.87798042e-03, 1.72681231e-03, 1.02329784e-03, 5.99874260e-04,
          3.48562915e-04, 2.01198968e-04]])
---
